changed: h1 tag to p tag by Sardor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>bu tagni Ibrohim ochdi</h1>
+    <p>bu tagni Ibrohim ochdi. Bu tagni Sardor p tagga ozgartirdi chunki bu oddiy text</p>
 </body>
 </html>
