--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>bu tagni Ibrohim ochdi. Bu tagni Sardor p tagga ozgartirdi chunki bu oddiy text</p>
+    <h1>segsdgd</h1>
 </body>
 </html>
